--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.5",
+    "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-dotenv": "^3.4.9",
