--- a/app.json
+++ b/app.json
@@ -31,6 +31,14 @@
       "eas": {
         "projectId": "66fd34de-9b95-428e-b6e0-19ca28437835"
       }
-    }
+    },
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your friends."
+        }
+      ]
+    ]
   }
 }
